--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body * {
 	transform: translateY(-50%);
 }
 
-.light #switch button{
+.light #switch button {
 	right: 0;
 	left: initial;
 }
@@ -162,4 +162,15 @@ footer {
 	text-align: center;
 	padding: 24px;
 	font-size: 14px;
+}
+
+/* media queries*/
+@media (min-width: 700px;) {
+	:root {
+		--bg-url: url(./assets/bg-desktop.jpg);
+	}
+
+	.light {
+		--bg-url: url(./assets/bg-desktop-light.jpg);
+	}
 }
