change bg base om media rules

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 
 	/*background: color image repeat position/size*/
 	background: var(--bg-url) no-repeat top center / cover;
+	height: 100%;
 }
 body * {
 	font-family: "Inter", sans-serif;
@@ -165,7 +166,7 @@ footer {
 }
 
 /* media queries*/
-@media (min-width: 700px;) {
+@media (min-width: 700px) {
 	:root {
 		--bg-url: url(./assets/bg-desktop.jpg);
 	}
