--- a/style.css
+++ b/style.css
@@ -81,11 +81,14 @@ body * {
 	left: 0;
 	top: 50%;
 	transform: translateY(-50%);
+
+	animation: slide-out 0.4s;
 }
 
 .light #switch button {
-	right: 0;
-	left: initial;
+	/*right: 0;
+	left: initial;*/
+	animation: slide-in 0.4s forwards;
 }
 
 #switch span {
@@ -173,5 +176,24 @@ footer {
 
 	.light {
 		--bg-url: url(./assets/bg-desktop-light.jpg);
+	}
+}
+
+/* animation */
+@keyframes slide-in {
+	from {
+		left: 0;
+	}
+	to {
+		left: 50%;
+	}
+}
+
+@keyframes slide-out {
+	from{
+		left: 50%;
+	}
+	to{
+		left: 0;
 	}
 }
