add hover on button

--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ body * {
 	animation: slide-out 0.4s;
 }
 
+#switch button:hover{
+	outline: 8px solid var(--highlight-color);
+}
+
 .light #switch button {
 	/*right: 0;
 	left: initial;*/
